# ACP

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  security.yml
ci/: build.sh  release.sh  test.sh
crates/acp-core/: Cargo.toml
crates/acp-core/src/: cipher.rs  error.rs  key.rs  lib.rs  session.rs
crates/acp-core/src/primitives/: aead.rs  kdf.rs  mod.rs
crates/acp-core/tests/: integration_tests.rs
crates/acp-cpp/: Cargo.toml
crates/acp-cpp/src/: lib.rs
crates/acp-csharp/: Cargo.toml
crates/acp-csharp/src/: lib.rs
crates/acp-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/acp-ffi/src/: error.rs  lib.rs  types.rs
examples/: Cargo.toml
examples/c/: CMakeLists.txt  basic_encryption.c
examples/rust/: basic_encryption.rs  key_derivation.rs  session_management.rs
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: fuzz_cipher.rs  fuzz_key.rs
