[package]
name = "acp-cpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "ACP C++ bindings"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
acp-core = { path = "../acp-core" }
acp-ffi = { path = "../acp-ffi" }
